# python-gismeteo-app

./: README.md  config.browserstack.env.example  config.emulation.env  config.env.py  config.py  pyproject.toml
model/: app.py
python_gismeteo_mobile/model/: app.py
python_gismeteo_mobile/tests/: conftest.py  test_gismeteo.py  tests_gismeteo.py
python_gismeteo_mobile/utils/: file.py
python_gismeteo_mobile/utils/allure/: attach.py
python_gismeteo_mobile/utils/browserstack/: get_attach.py
python_gismeteo_mobile/utils/notification/: telegram.json
tests/: conftest.py  test_gismeteo.py
utils/: file.py
utils/allure/: attach.py
